objects/Bundle_Card_Item__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Card_Category__c</fullName>
        <label>Bundle Card Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DG/Promo Hub</fullName>
                </value>
                <value>
                    <fullName>Email Newsletter</fullName>
                </value>
                <value>
                    <fullName>Supplier Network/Brand Page</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>EMI/Speed RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle_Card_Task__c</fullName>
        <label>Bundle Card Task</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bundle_Card_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Banner Ad - 294x60</fullName>
                </value>
                <value>
                    <fullName>Banner Ad - 300x250</fullName>
                </value>
                <value>
                    <fullName>Featured Content Ad</fullName>
                </value>
                <value>
                    <fullName>Billboard Destination</fullName>
                </value>
                <value>
                    <fullName>Featured Directory Listing</fullName>
                </value>
                <value>
                    <fullName>Marquee Promotion</fullName>
                </value>
                <value>
                    <fullName>Featured Supplier/Destination</fullName>
                </value>
                <value>
                    <fullName>Display Ad</fullName>
                </value>
                <value>
                    <fullName>Featured Blog Article</fullName>
                </value>
                <value>
                    <fullName>Content Promotion</fullName>
                </value>
                <value>
                    <fullName>Footer Promotion</fullName>
                </value>
                <value>
                    <fullName>Search Screen Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Diamond Plus Ad</fullName>
                </value>
                <value>
                    <fullName>Brand Page</fullName>
                </value>
                <value>
                    <fullName>Headliner</fullName>
                </value>
                <value>
                    <fullName>Opener</fullName>
                </value>
                <value>
                    <fullName>Center Stage</fullName>
                </value>
                <value>
                    <fullName>Spotlight</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
                <value>
                    <fullName>Finale</fullName>
                </value>
                <value>
                    <fullName>EM Banner Half</fullName>
                </value>
                <value>
                    <fullName>EM Banner Leaderboard</fullName>
                </value>
                <value>
                    <fullName>EM Banner Square Side</fullName>
                </value>
                <value>
                    <fullName>EM Banner Standard</fullName>
                </value>
                <value>
                    <fullName>EM Hero</fullName>
                </value>
                <value>
                    <fullName>SpeedRFP Network Hero</fullName>
                </value>
                <value>
                    <fullName>SpeedRFP Targeted Search</fullName>
                </value>
                <value>
                    <fullName>Microsite</fullName>
                </value>
                <value>
                    <fullName>Microsite Search Ad</fullName>
                </value>
                <value>
                    <fullName>Video Ad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Card</label>
        <referenceTo>Bundle_Card__c</referenceTo>
        <relationshipLabel>Bundle Card Items</relationshipLabel>
        <relationshipName>Bundle_Card_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle_Item_Comment__c</fullName>
        <label>Bundle Item Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Bundle_Card__r.Contact__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bundle Card Items</relationshipLabel>
        <relationshipName>Bundle_Card_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_not_create_a_task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not create a task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquisium_Response_Number__c</fullName>
        <label>Inquisium Response Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Start_Date__c</fullName>
        <label>Listing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_Sent_Date__c</fullName>
        <label>Proof Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_L2__c</fullName>
        <label>Status L2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missed-Client</fullName>
                </value>
                <value>
                    <fullName>Missed-Internal</fullName>
                </value>
                <value>
                    <fullName>Cancelled Contract</fullName>
                </value>
                <value>
                    <fullName>Mistake/Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>Date</type>
    </fields>
    <label>Bundle Card Item</label>
    <nameField>
        <displayFormat>BCardItem-A{0000}</displayFormat>
        <label>Bundle Card Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Card Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Mandatory_to_fill_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Contact__c), ISCHANGED(Status__c), 
ISPICKVAL(Status__c,"Closed"), 
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")))</errorConditionFormula>
        <errorMessage>Please select the contact before closing the Bundle Card Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_L2_Mandatory</fullName>
        <active>true</active>
        <description>Status L2 is required on Cancelled / Missed Status. Requested Under Case # 09906408</description>
        <errorConditionFormula>AND( 

OR(
ISPICKVAL( Status__c , "Cancelled"),
ISPICKVAL( Status__c , "Missed")
),

OR( 
CONTAINS($Profile.Name,"Customer Care"),
CONTAINS($Profile.Name,"Client Services")
),

ISPICKVAL( Status_L2__c,"")
)</errorConditionFormula>
        <errorDisplayField>Status_L2__c</errorDisplayField>
        <errorMessage>You must fill Status L2</errorMessage>
    </validationRules>
</CustomObject>